# python-excercises-sequence

./: .gitignore  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: classroom.yml
exercise_metadata/: __init__.py  loader.py  registry.py  resolver.py  schema.py
exercise_runtime_support/: __init__.py  execution_variant.py  exercise_catalogue.py  exercise_test_support.py  helpers.py  notebook_grader.py  pytest_collection_guard.py  support_matrix.py
exercise_runtime_support/exercise_framework/: __init__.py  api.py  assertions.py  constructs.py  expectations.py  expectations_helpers.py  fixtures.py  paths.py  reporting.py  runtime.py
exercise_runtime_support/student_checker/: __init__.py  api.py  models.py  notebook_runtime.py  reporting.py
exercise_runtime_support/student_checker/checks/: __init__.py  base.py
exercises/sequence/additional-resources/: ARITHMETIC_CHEATSHEET.md  sequence-cheat-sheet.md
exercises/sequence/ex002_sequence_modify_basics/: exercise.json
exercises/sequence/ex003_sequence_modify_variables/: exercise.json
exercises/sequence/ex004_sequence_debug_syntax/: exercise.json
exercises/sequence/ex005_sequence_debug_logic/: exercise.json
exercises/sequence/ex006_sequence_modify_casting/: exercise.json
exercises/sequence/ex007_sequence_debug_casting/: exercise.json
exercises/sequence/ex008_sequence_make_consolidation/: exercise.json
scripts/: build_autograde_payload.py
tests/: __init__.py  autograde_plugin.py  helpers.py  test_autograde_plugin.py  test_build_autograde_payload.py
(+64 files in other folders)
