[project]
name = "python-exercises"
version = "0.1.0"
description = "Python exercises with automated testing"
readme = "README.md"
requires-python = ">=3.11"

# All dependencies must be installable via micropip in VS Code for the Web
# See: https://pyodide.org/en/stable/usage/packages-in-pyodide.html

dependencies = [
  "pytest>=9.0.2",
  "ruff>=0.14.13",
  "ipykernel>=7.1.0",
  "jupyterlab>=4.5.2",
  "tabulate>=0.9.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
markers = ["task(taskno): marks the exercise task number"]
